# buyer-v2

./: .env.example  .gitignore  .railwayignore  AGENTS.md  CLAUDE.md  DESIGN.md  Dockerfile.extraction  README.md  components.json  convex-rules.md  instrumentation-client.ts  next.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  railway.json  sentry.client.config.ts  sentry.server.config.ts  tsconfig.json  vitest.config.ts  workflow.md
python-workers/: README.md  mypy.ini  pyproject.toml  ruff.toml
python-workers/common/: parser_errors.py  portals.py  property.py  types.py
python-workers/crawlers/: fl_permits_broward.py
python-workers/fetch/: __init__.py  metrics.py  orchestrator.py  unlocker.py
python-workers/fixtures/: README.md  __init__.py
python-workers/fixtures/vendor_responses/: __init__.py
python-workers/lib/: browser_use_client.py
python-workers/ocr/: __init__.py  app.py  extract_text.py  types.py
python-workers/parsers/: __init__.py  realtor.py  redfin.py  zillow.py  zillow_search.py
python-workers/sources/: fema_flood.py
python-workers/tests/: conftest.py  test_browser_use_client.py  test_common_parser_errors.py  test_common_property.py  test_crawler_permits_broward.py  test_document_ocr.py  test_errors.py  test_fixture_manifest.py  test_metrics.py  test_ocr_service.py  test_orchestrator.py  test_parsers_realtor.py  test_parsers_redfin.py  test_parsers_zillow.py  test_portals.py  test_unlocker.py
services/extraction/: .env.example  Dockerfile  README.md  pyproject.toml  railway.json
services/extraction/python-workers-vendored/: .env.example  .gitignore  (+1 more)
(+1010 files in other folders)
